fix grid buttons text size on mobile

--- a/Hiragana Quiz/src/app/quiz/Components/character-grid/character-grid.component.css
+++ b/Hiragana Quiz/src/app/quiz/Components/character-grid/character-grid.component.css
@@ -96,10 +96,10 @@
   }
 
   h1{
-    font-size: 0.5em;
+    font-size: 0.8em;
   }
   p{
-    font-size: 0.2em;
+    font-size: 0.6em;
   }
   p,h1{
     margin: 0;
